# Embedded-Security-System

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: displayManager.hpp  heartbeat.hpp  main.hpp  messageHandler.hpp  notifier.hpp  password.hpp  shutdownHandler.hpp  socket.hpp  surveillance.hpp  tests.hpp  utils.hpp
app/src/: displayManager.cpp  heartbeat.cpp  main.cpp  messageHandler.cpp  notifier.cpp  password.cpp  shutdownHandler.cpp  socket.cpp  surveillance.cpp  tests.cpp  utils.cpp
common/: CMakeLists.txt
common/include/common/: utils.hpp
common/src/: utils.cpp
hal/: CMakeLists.txt
hal/include/hal/: buzzer.hpp  gpio.hpp  joystick.hpp  keypad.hpp  lcd.hpp  led.hpp  motionSensor.hpp  relay.hpp  webcam.hpp
hal/src/: buzzer.cpp  capture.c  gpio.cpp  joystick.cpp  keypad.cpp  lcd.cpp  led.cpp  motionSensor.cpp  relay.cpp  webcam.cpp
web-app/: Makefile
web-app/client/: README.md  package-lock.json  package.json
web-app/client/public/: index.html  manifest.json
web-app/client/src/: App.js  Home.js  index.js
web-app/server/: .env.template  Makefile  README.md  index.js  package-lock.json  package.json
